--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-@font-face {
-    font-family: 'icomoon';
-    src: url("../fonts/icomoon/icomoon.eot?1z9v6x");
-    src: url("../fonts/icomoon/icomoon.eot?1z9v6x#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?1z9v6x") format("truetype"), url("../fonts/icomoon/icomoon.woff?1z9v6x") format("woff"), url("../fonts/icomoon/icomoon.svg?1z9v6x#icomoon") format("svg");
-    font-weight: normal;
-    font-style: normal;
-}
-
 html {
     overflow-x: hidden;
 }
@@ -359,8 +351,7 @@ a:active {
     }
 }
 
-.probootstrap-navbar .dropdown>a:before {
-    font-family: 'icomoon';
+navbar .dropdown>a:before {
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -604,7 +595,6 @@ only screen and (min-resolution: 2dppx) {
 }
 
 .probootstrap-navbar .dropdown-submenu>a:before {
-    font-family: 'icomoon';
     speak: none;
     font-style: normal;
     font-weight: normal;
@@ -2733,7 +2723,6 @@ only screen and (min-resolution: 2dppx) {
 }
 
 .flexslider .flex-direction-nav a:before {
-    font-family: 'icomoon';
     speak: none;
     font-style: normal;
     font-weight: normal;
