--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,14 @@ html {
     overflow-x: hidden;
 }
 
+@font-face {
+    font-family: 'icomoon';
+    src: url("../fonts/icomoon/icomoon.eot?1z9v6x");
+    src: url("../fonts/icomoon/icomoon.eot?1z9v6x#iefix") format("embedded-opentype"), url("../fonts/icomoon/icomoon.ttf?1z9v6x") format("truetype"), url("../fonts/icomoon/icomoon.woff?1z9v6x") format("woff"), url("../fonts/icomoon/icomoon.svg?1z9v6x#icomoon") format("svg");
+    font-weight: normal;
+    font-style: normal;
+}
+
 body {
     background: #EFF0F4;
     color: #8b8e94;
