--- a/css/styles-merged.css
+++ b/css/styles-merged.css
@@ -5944,8 +5944,11 @@ a.badge:hover {
     padding-bottom: 30px;
     margin-bottom: 30px;
     color: inherit;
-    background-color: #eee height: 80vh;
-    repeat: no-repeat;
+    background-color: #eee;
+    height: 120vh;
+    background-image: url("../img/oab.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .jumbotron .h1,
