--- a/css/style.css
+++ b/css/style.css
@@ -778,7 +778,7 @@ only screen and (min-resolution: 2dppx) {
 }
 
 .probootstrap-hero.probootstrap-hero-colored {
-    background: #6a41ed;
+    background: #009FB7;
 }
 
 .probootstrap-hero.probootstrap-hero-colored h1 {
@@ -1013,7 +1013,7 @@ only screen and (min-resolution: 2dppx) {
 }
 
 .probootstrap-section.probootstrap-section-colored {
-    background: #6a41ed;
+    background: #009FB7;
 }
 
 .probootstrap-section.probootstrap-section-colored .section-heading h2 {
