--- a/css/styles-merged.css
+++ b/css/styles-merged.css
@@ -5946,9 +5946,13 @@ a.badge:hover {
     color: inherit;
     background-color: #eee;
     height: 120vh;
-    background-image: url("../img/oab.jpg");
+    background-image: url("../img/libraryfcc.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+}
+
+.markdownSection {
+    background-color:#5F7367;
 }
 
 .jumbotron .h1,
