--- a/css/styles-merged.css
+++ b/css/styles-merged.css
@@ -5949,10 +5949,11 @@ a.badge:hover {
     background-image: url("../img/libraryfcc.jpg");
     background-repeat: no-repeat;
     background-size: cover;
+    background-image: max-width: 100%;
 }
 
 .markdownSection {
-    background-color:#5F7367;
+    background-color: #5F7367;
 }
 
 .jumbotron .h1,
